# web-builder-server

./: Cargo.toml  README.md
src/: main.rs
src/controllers/v1/: mod.rs
src/controllers/v1/pages/: handlers.rs  mod.rs  requests.rs
src/controllers/v1/site_versions/: handlers.rs  mod.rs  requests.rs
src/controllers/v1/sites/: handlers.rs  mod.rs  requests.rs
src/models/: mod.rs  page_model.rs  site_model.rs  site_version_model.rs  user_model.rs
src/repositories/: mod.rs  page_repository.rs  site_repository.rs  site_version_repository.rs
src/services/: mod.rs  page_service.rs  site_service.rs  site_version_service.rs
src/utils/: cli_error.rs  http_result.rs  mod.rs  model_doc.rs  result.rs
