[package]
name = "web-builder-server"
version = "0.1.0"
authors = ["Andy Ching <dogdoglization@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.24"
mongodb = "0.9.0"
bson = "0.14.0"
failure = "0.1.6"
chrono= { version = "0.4.10", features = ["serde"] }
jwt = "0.4.0"
